fixing spacing

--- a/styles/swiperJs/SwiperNav.module.css
+++ b/styles/swiperJs/SwiperNav.module.css
@@ -8,11 +8,11 @@
   transform: translateY(-50%);
 }
 .swiperNext {
-  right: 1%;
+  right: 1.5%;
   margin-right: 10px;
 }
 .swiperPrev {
-  left: 1%;
+  left: 1.5%;
   margin-left: 10px;
 }
 .swiperDisabled {
